<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_author"
        android:icon="@drawable/author_icon"
        android:title="@string/title_author" />

    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/add_icon"
        android:title="@string/title_add" />

    <item
        android:id="@+id/navigation_library"
        android:icon="@drawable/library_icon"
        android:title="@string/title_library" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile_icon"
        android:title="@string/title_profile" />

</menu>
